# ForgeUE

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  probe_aliases.py  probe_framework.py  probe_glm_image_debug.py  probe_glm_watermark_param.py  probe_glm_watermark_via_framework.py  probe_hunyuan_3d_format.py  pyproject.toml
.claude/commands/codex/: adversarial-review.md  cancel.md  result.md  review.md  status.md
.claude/commands/forgeue/: change-apply.md  change-debug.md  change-doc-sync.md  change-finish.md  change-plan.md  change-review.md  change-status.md  change-verify.md
.claude/skills/forgeue-doc-sync-gate/: SKILL.md
.claude/skills/forgeue-integrated-change-workflow/: SKILL.md
config/: models.yaml
docs/: INDEX.md  claude_independent_plan_v1.md  claude_unified_architecture_plan_v1.md
docs/acceptance/: acceptance_report.md
docs/ai_workflow/: README.md  forgeue_integrated_ai_workflow.md  validation_matrix.md
docs/api_des/: GLM-4.6V.md  GLM-Image.md  HunYuan.md  QWEN-Image-Edit.md  QWEN-Image.md
docs/archive/: README.md  claude_cross_review_report_v1.md  claude_unified_architecture_plan_v1.md  unified_architecture_vNext.md
docs/archive/assistant_plan_bundle/: 01_UE_Three_Mode_Framework_Object_Model_Definition_v1.md  04_UE_Bridge_Minimal_Runnable_Implementation_Plan_v1.md
docs/assistant_plan_bundle/: 02_Production_Workflow_Nested_Review_Design_v1.md  03_Artifact_Contract_and_UE_Asset_Manifest_Design_v1.md  05_UE_Multi_Model_Framework_Repo_Mapping_and_Execution_Plan.md  06_UE_Multi_Model_Framework_Object_Model_and_Runtime_Design_v1.md
docs/design/: HLD.md  LLD.md
docs/requirements/: SRS.md
docs/review/: tbd_006_visual_review_image_compression.md
docs/testing/: test_spec.md
examples/: character_extract.json  image_edit_pipeline.json  image_pipeline.json  image_to_3d_pipeline.json  image_to_3d_pipeline_live.json  mock_linear.json  review_3_images.json  ue5_api_query.json  ue_export_pipeline.json  ue_export_pipeline_live.json
framework/: __init__.py  run.py
framework/artifact_store/: __init__.py  hashing.py  repository.py
framework/artifact_store/payload_backends/: __init__.py  base.py  inline_backend.py
framework/core/: artifact.py  enums.py  policies.py  review.py  runtime.py  task.py  ue.py
framework/observability/: __init__.py  compactor.py  event_bus.py  secrets.py  tracing.py
framework/pricing_probe/: __init__.py  __main__.py  fetcher.py  yaml_writer.py
framework/pricing_probe/parsers/: dashscope.py  tripo3d.py
framework/providers/: __init__.py  _download.py  base.py  capability_router.py  fake_adapter.py  hunyuan_tokenhub_adapter.py  litellm_adapter.py  model_registry.py  qwen_multimodal_adapter.py
framework/providers/workers/: __init__.py  (+2 more)
framework/review_engine/: __init__.py  chief_judge.py  judge.py  rubric_loader.py
framework/runtime/: budget_tracker.py  dry_run_pass.py  failure_mode_map.py  orchestrator.py  transition_engine.py
framework/schemas/: mesh_spec.py  registry.py  ue_character.py
framework/server/: __init__.py  ws_server.py
framework/ue_bridge/: __init__.py  evidence.py  import_plan_builder.py  manifest_builder.py  permission_policy.py
framework/workflows/: loader.py
openspec/: config.yaml
probes/: README.md  _output.py
probes/provider/: probe_glm_image_debug.py  probe_glm_watermark_param.py  probe_glm_watermark_via_framework.py  probe_hunyuan_3d_format.py  probe_hunyuan_3d_query.py  probe_hunyuan_3d_submit.py  probe_packycode.py  probe_visual_review.py
probes/smoke/: probe_chat.py  probe_framework.py  probe_models.py
src/framework/: run.py
tests/: conftest.py
tests/fixtures/: __init__.py  test_models.yaml
tests/integration/: test_dag_concurrency.py  test_example_bundles_smoke.py  test_image_edit.py  test_l4_image_to_3d.py  test_mesh_failure_visibility.py  test_p0_mock_linear.py  test_p1_structured_extraction.py  test_p2_standalone_review.py  test_p3_production_pipeline.py  test_p4_ue_manifest_only.py  test_run_comparison_cli.py  test_ws_progress.py
tests/unit/: test_adapter_budget_clamp.py  test_artifact_repository.py  test_budget_tracker.py  test_budget_tracker_pricing.py  test_cancellation.py  test_cascade_cancel.py  test_checkpoint_store.py  test_chief_judge_parallel.py  test_cn_image_adapters.py  test_codex_audit_fixes.py  test_comfy_http_unsupported.py  test_compactor.py  test_core_schemas.py  test_download_async.py  test_dry_run_pass.py  test_event_bus.py  test_failure_mode_map.py  test_forgeue_change_state.py  test_forgeue_codex_review_no_skill_files.py  test_forgeue_command_markdown.py  test_forgeue_cross_check_format.py  test_forgeue_doc_sync_check.py  test_forgeue_env_detect.py  test_forgeue_finish_gate.py  test_forgeue_no_duplicated_tdd_skill.py  test_forgeue_skill_markdown.py  test_forgeue_verify.py  test_forgeue_workflow_ascii_markers.py  test_forgeue_workflow_no_hardcoded_test_count.py  test_forgeue_workflow_no_paid_default.py  test_forgeue_workflow_plugin_invocation.py  test_forgeue_writeback_detection.py  test_generate_mesh_cost.py  test_mesh_no_silent_retry.py  test_mesh_worker_quota_errors.py  test_model_registry.py  test_multi_candidate_parallel.py  test_payload_backends.py  test_pr3_cleanup_fences.py  test_pricing_parser_dashscope.py  (+26 more)
tools/: _common.py  forgeue_change_state.py  forgeue_doc_sync_check.py  forgeue_env_detect.py  forgeue_finish_gate.py  forgeue_verify.py
ue_scripts/: a1_run.py  domain_audio.py  domain_material.py  domain_mesh.py  domain_texture.py  evidence_writer.py  manifest_reader.py  run_import.py
(+159 files in other folders)
