[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeue"
version = "0.1.0"
description = "UE production-chain multi-model framework (vNext)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.40",
    "instructor>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 110
target-version = "py311"
