[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeue"
version = "0.1.0"
description = "UE production-chain multi-model framework (vNext)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    # httpx is a hard runtime dep — qwen/hunyuan adapters and the mesh_worker
    # module all `import httpx` at module top, and those modules are eagerly
    # loaded via framework.providers.__init__. Moving it under an optional
    # extra would break `pip install -e .` for every entry point.
    "httpx>=0.26",
]

[project.optional-dependencies]
llm = [
    "litellm>=1.40",
    "instructor>=1.3",
]
server = [
    "starlette>=0.36",
    "uvicorn[standard]>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
include = ["framework*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"
